--- a/preamble.tex
+++ b/preamble.tex
@@ -8,7 +8,7 @@
 \usepackage{enumitem}
 \usepackage{xr}
 \usepackage{amsmath,amssymb,amsthm}
-\usepackage{siunitx,bm}
+\usepackage{physics,siunitx,bm}
 \usepackage{mhchem,chemfig,chemformula}
 \usepackage{tikz}
 \usepackage{float,subcaption}
@@ -41,6 +41,8 @@
 \setchemfig{atom sep=2em,fixed length=true,bond offset=3pt,cram width=3pt}
 
 \colorlet{blx}{blue!40!black!80}
+\colorlet{grx}{green!40!black!70}
+\colorlet{rex}{red!40!black!70}
 
 \newcommand{\e}[1][]{\text{e}^{#1}}
 
