Prof Office Hours 1

--- a/Notes/Unit1/Unit1.tex
+++ b/Notes/Unit1/Unit1.tex
@@ -565,7 +565,7 @@
         \begin{itemize}
             \item Each phosphine and each carbonyl is a 2-electron donor.
             \item The hydride is an X-type ligand with a covalent bond, and thus a 1-electron donor.
-            \item Now for the big bulky center bridging ligand: The sulfurs each carry a $+1$ formal charge and form two covalent bonds to the metal centers, so they each contribute three electrons. The nitrogen has an additional $+1$ formal charge, so the ligand overall is a $2\cdot 3+1=6$-electron donor.
+            \item Now for the big bulky center bridging ligand: The sulfurs each carry a $+1$ formal charge and form two covalent bonds to the metal centers, so they each contribute three electrons. The nitrogen has an additional $+1$ formal charge, so the ligand overall is a $2\cdot 3+1=7$-electron donor.
             \item Summing all of this gives us 20 electrons.
             \item Now for the metal centers: Each iron is $d^8$.
             \item Thus, that's 36 electrons in total, but divided over two iron centers.
@@ -926,6 +926,36 @@
             \item Note that neodymium magnets are strong because they combine a lanthanide that contributes massive S.O.C. effects, lots of electrons, and anisotropy (neodymium) and a transition metal that effectively couples with orbitals that aren't as buried as neodymium's $f$ orbitals (iron).
         \end{itemize}
     \end{enumerate}
+\end{itemize}
+
+
+
+\section{Office Hours (Anderson)}
+\begin{itemize}
+    \item \marginnote{4/5:}Electron counting for a metal center bonded to a $\pi$ bond?
+    \begin{itemize}
+        \item As in PSet 1 Questions 1.2 and 1.6.
+        \item Example: \ce{Ni-}ethene.
+        \begin{itemize}
+            \item The $\pi$ electron density can donate to the nickel atom in a dative fashion.
+            \item We can also think of two covalent bonds to the nickel; one from each carbon.
+        \end{itemize}
+        \item Example: \ce{Ni(COD)2}.
+        \begin{itemize}
+            \item Electron count: 18 (8 from the ligands [2 from each of 4 $\pi$ bonds] and 10 from the $d^{10}$ nickel atom).
+        \end{itemize}
+    \end{itemize}
+    \item Electron counting for a metal center bonded to a $\sigma$ bond?
+    \begin{itemize}
+        \item Also donates two electrons datively, as in PSet 1 Question 1.9.
+    \end{itemize}
+    \item \ce{M-M} bonds and oxidation states?
+    \begin{itemize}
+        \item Reviews the discussion surrounding Figure \ref{fig:ficFragments}.
+    \end{itemize}
+    \item The binding of a Z-type ligand does not affect the electron count of a compound at all.
+    \item The formal charges on the molecules in the PSet are the charges of the molecules as a whole, not any one part.
+    \item \textbf{Metal-organic frameworks} or MOFs.
 \end{itemize}
 
 
