TA Office Hours 2

--- a/Notes/Unit1/Unit1.tex
+++ b/Notes/Unit1/Unit1.tex
@@ -960,5 +960,44 @@
 
 
 
+\section{Office Hours (Whitmeyer)}
+\begin{itemize}
+    \item \marginnote{4/6:}Transition metal trends: Why do first row transition metals prefer to have $1\,\e[-]$ coupled?
+    \begin{itemize}
+        \item Referring to reactivity? B/c higher oxidation states are more stable for early row transition metals.
+    \end{itemize}
+    \item Figure VI.13 of \textcite{bib:CHEM20100Notes} says that \emph{two} metal orbitals form bonding/antibonding orbitals with the ligand orbitals, so why does Dr. Anderson assert that only \emph{one} does? Is it because of what he said about $d_{z^2}$ being practically interchangeable with the $d_{xy,xz,yz}$ ligands in square planar complexes?
+    \begin{itemize}
+        \item Yes it is.
+    \end{itemize}
+    \item Now this question could just be a relic of my previous understanding of bonding, and the answer may just be "MO theory," but I'm still gonna ask: Where do the electrons in all of the bonds come from? It seems like if the osmiums are giving electrons to \ce{Os-Os} and \ce{Os-H} bonds, and we still count osmium as $d^8$, we are counting some electrons twice.
+    \begin{itemize}
+        \item It's fine to count them twice. The electron count is a computational tool, not a count of electrons.
+        \item Does the electron count have physical meaning?
+        \begin{itemize}
+            \item Guides you toward what compounds are more reactive. And other chemical properties.
+        \end{itemize}
+    \end{itemize}
+    \item What does isolobal mean?
+    \item The fic fragment: Right spelling/charge?
+    \item Does the iron in Figure \ref{fig:ficFragments} have tetrahedral or square planar geometry and why?
+    \item Copies Table VI.2 from \textcite{bib:CHEM20100Notes}. Some differences?
+    \item Why these specific spins to higher and lower energy (Figure \ref{fig:zeemanSplitting-1e})? Or is it arbitrary?
+    \item What is a Boltzmann population?
+    \item Differences in Curie's Law from last quarter?
+    \item How do you define $d$ count? \textcite{bib:CBC} defines it as $d^n-x$ where $d^n$ is the ground state configuration and $x$ is the number of X-functions.
+    \begin{itemize}
+        \item The $d^n$ count should reflect the oxidation state.
+    \end{itemize}
+    \item Charges on compounds affect the oxidation state of the metal.
+    \item Where do the extra electrons come from in the \ce{CO} resonance structures (the ones that are bonded to the metal)?
+    \begin{itemize}
+        \item All \ce{M-C} bonds are 2-electron? The IR stretching frequency just changes in some resonance structures so we call this a multiple \ce{M-C} bond even though it isn't.
+    \end{itemize}
+    \item How do we handle ligands with preexisting charges (i.e., \ce{NO+}, \ce{SO4^2-}, \ce{$\eta^3${-}C3H5+}, etc.)
+\end{itemize}
+
+
+
 
 \end{document}
