--- a/main.bib
+++ b/main.bib
@@ -23,12 +23,23 @@
 }
 
 @article{bib:trigonalBiprysmatic,
-author = {Valerie Pfennig and Konrad Seppelt},
-title = {Crystal and Molecular Structures of Hexamethyltungsten and Hexamethylrhenium},
-journal = {Science},
-volume = {271},
-number = {5249},
-pages = {626-628},
-year = {1996},
-doi = {10.1126/science.271.5249.626}
+    author = {Valerie Pfennig and Konrad Seppelt},
+    title = {Crystal and Molecular Structures of Hexamethyltungsten and Hexamethylrhenium},
+    journal = {Science},
+    volume = {271},
+    number = {5249},
+    pages = {626-628},
+    year = {1996},
+    doi = {10.1126/science.271.5249.626}
+}
+
+@article{bib:CBC,
+    author = {Malcolm L H Green},
+    title = {A new approach to the formal classification of covalent compounds of the elements},
+    journal = {Journal of Organometallic Chemistry},
+    volume = {500},
+    number = {1-2},
+    pages = {127-148},
+    year = {1995},
+    doi = {10.1016/0022-328X(95)00508-N}
 }
