--- a/Notes/Unit1/Unit1.tex
+++ b/Notes/Unit1/Unit1.tex
@@ -999,5 +999,34 @@
 
 
 
+\section{Discussion Section}
+\begin{itemize}
+    \item No discussion or office hours on the April 20; instead, there will be a special 2-hour exam review on April 15, 16, 17 (she will send a When2Meet poll). There will be 3 lectures per week, of 2-3 videos on Panopto. Office hours (one for Dr. Anderson and one for Sophie) will be one time per week. Please come to discussion: this is your question venue! Feel free to send along things you want discussed to Sophie in advance. Sophie can answer things much more thoroughly in discussion.
+    \item Difference between L- and X-type ligands:
+    \begin{itemize}
+        \item Draw out lone pairs. Break bonds (pushing electrons back onto ligands). If the ligand is neutral, it's L-type. If it's negatively charged, it's X-type.
+        \begin{itemize}
+            \item So if you have an oxygen as a singly bonded ligand and break the bond, oxygen will be negative. If you do the same thing with nitrogen, it will be neutral.
+            \emph{draw a picture}
+        \end{itemize}
+    \end{itemize}
+    \item When dealing with $f$-block compounds, be careful about the periodic placement (different periodic tables place lanthanium and actinium in different places).
+    \item Why $f$-block electrons for the electron count?
+    \begin{itemize}
+        \item The lanthanides and actinides don't follow the 18 electron rule.
+        \item This is a very active area of research (at the forefront of bonding actually), but the growing consensus is that\dots
+        \begin{itemize}
+            \item The lanthanides do not engage in covalent bonding; they're purely ionic.
+            \item The actinides can engage in limited covalent bonding with their $f$ block because their larger $f$ block extends a little bit further.
+        \end{itemize}
+    \end{itemize}
+    \item We can do isolobal analogies with bridging ligands, too!
+    \item One should never \emph{assume} that there's a \ce{M-M} bond, but one should always \emph{wonder} if there's one.
+    \item Potentially you can invoke $\pi$ donation from a ligand to get a compound to 18 electrons.
+    \item \textbf{Hapticity}: The number of carbons in the $\pi$ system. \emph{Also known as} $\bm{\eta}$.
+\end{itemize}
+
+
+
 
 \end{document}
